// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shift Should render schedule edit shift item 1`] = `
<div
  className="DutyScheduleEdit-Shift"
>
  <ShiftInterval
    end={2010-02-10T00:00:00.000Z}
    key="interval"
    start={2010-02-01T00:00:00.000Z}
  />
  <ShiftStatus
    id={42}
    key="status"
    person={true}
  />
  <ShiftActions
    edit={[Function]}
    id={42}
    key="actions"
  />
</div>
`;

exports[`Shift Should render schedule edit shift item with problems 1`] = `
<div
  className="DutyScheduleEdit-Shift DutyScheduleEdit-Shift_warn"
>
  <ShiftInterval
    end={2010-02-10T00:00:00.000Z}
    key="interval"
    start={2010-02-01T00:00:00.000Z}
  />
  <ShiftStatus
    id={42}
    key="status"
  />
  <ShiftActions
    edit={[Function]}
    id={42}
    key="actions"
  />
</div>
`;
